<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_top"
        style="@style/Toolbar"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/white"
        android:padding="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/portrait"
            android:textColor="@color/text_title"
            android:textSize="@dimen/sp_16"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_portrait"
            android:src="@drawable/ic_default_portrait"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/white"
        android:padding="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/account"
            android:textColor="@color/text_title"
            android:textSize="@dimen/sp_16"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_account"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_sub_sub"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <View
        android:background="@color/bg_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"/>

    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:background="@color/white"
        android:padding="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/nickname"
            android:textColor="@color/text_title"
            android:textSize="@dimen/sp_16"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:text="@string/click_to_edit"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/text_sub_sub"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>
